--- a/src/Components/Body.scss
+++ b/src/Components/Body.scss
@@ -1,39 +1,38 @@
 .main-head {
-    display: flex;
-    padding: 0px 250px;
-    align-items: center;
-    justify-content: space-around;
-    img {
-        height: 600px;
-        padding-top: 50px;
-
+  display: flex;
+  padding: 100px 250px;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgb(84, 124, 136);
+  img {
+    height: 600px;
+    margin-top: 2rem;
+    padding-top: 10px;
+    background-color: rgb(29, 29, 126);
+    border-radius: 1550px;
+    box-shadow: 2px 2px 8px black;
+  }
+  .tags {
+    font-size: 25px;
+    h1 {
+      line-height: 20px;
+      font-size: 6rem;
     }
-    .tags {
-        font-size: 25px;
-        h1 {
-            line-height: 20px;
-            font-size: 6rem;
-        }
-        h2 {
-            font-size: 4rem;
-        }
-        .btn {
-            background-color: coral;
-            color: white;
-            padding: 0.5rem;
-            border: none;
-        }
-        
+    h2 {
+      font-size: 4rem;
     }
-    
+    .btn {
+      background-color: rgb(71, 36, 116);
+      color: white;
+      padding: 1rem;
+      border: none;
+    }
+    .btn:hover {
+      transform: scale(1.2);
+      cursor: pointer;
+      background-color: cornflowerblue;
+      border-radius: 25px;
+      transition: 0.3s;
+    }
+  }
 }
-
-.btn:hover {
-    transform: scale(1.2);
-    cursor: pointer;
-    background-color: cornflowerblue;
-    border-radius: 20px;
-    transition: 0.3s;
-}
-
-
