--- a/src/Components/Label.scss
+++ b/src/Components/Label.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 70px 300px;
   gap: 2rem;
+  justify-content: center;
 
   .main-com {
     display: flex;
@@ -10,16 +11,34 @@
     border-radius: 8px;
     width: 500px;
     justify-content: space-between;
+    height: 20h;
+
     img {
       width: 100px;
       margin-left: 1rem;
+      margin-right: 1rem;
+      background-color: rgb(124, 103, 103);
+      border-radius: 50px;
+      padding: 2px;
+      box-shadow: 1px 1px 4px rgb(90, 86, 86);
     }
     .please {
       padding: 30px;
 
+      p {
+        width: 115px;
+        padding: 8px;
+        border: 1px solid brown;
+        border-radius: 5px;
+        color: brown;
+      }
+
       p:hover {
         color: coral;
         cursor: pointer;
+        background-color: rgb(99, 63, 63);
+        border-radius: 10px;
+        transition: 0.3s;
       }
       h1 {
         font-weight: 500;
