--- a/src/Components/Footer.scss
+++ b/src/Components/Footer.scss
@@ -8,6 +8,14 @@
     color: white;
     font-size: 1rem;
     padding: 0px 2px;
+    .accounts {
+      display: flex;
+      padding-left: 5px;
+      :hover {
+        transform: scale(1.1);
+        cursor: pointer;
+      }
+    }
     img {
       width: 5rem;
       padding-left: 5px;
