--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,5 +1,6 @@
 .head {
   display: flex;
+  z-index: 999;
   padding: 0px 400px;
   width: 1000px;
   gap: 450px;
@@ -8,8 +9,10 @@
   box-shadow: 1px 1px 8px rgb(80, 79, 79);
   .lines {
     margin: 0px;
+
     ul {
       display: flex;
+
       :hover {
         color: white;
         background-color: rgb(113, 2, 128);
